FIX: modify the translation
Change-Id: Ia147871df754f5188fb7a0a8fcfac01e2db18c1d

--- a/bbl/i18n/BambuStudio.pot
+++ b/bbl/i18n/BambuStudio.pot
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2022-10-21 14:33+0800\n"
+"POT-Creation-Date: 2022-10-31 09:32+0800\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -72,6 +72,9 @@ msgstr ""
 msgid "Smart fill angle"
 msgstr ""
 
+msgid "On overhangs only"
+msgstr ""
+
 msgid "Auto support threshold angle: "
 msgstr ""
 
@@ -85,6 +88,10 @@ msgid "Fill"
 msgstr ""
 
 msgid "Gap Fill"
+msgstr ""
+
+#, possible-boost-format
+msgid "Allows painting only on facets selected by: \"%1%\""
 msgstr ""
 
 msgid "Highlight faces according to overhang angle."
@@ -139,6 +146,12 @@ msgid "Bucket fill"
 msgstr ""
 
 msgid "Height range"
+msgstr ""
+
+msgid "Ctrl + Shift + Enter"
+msgstr ""
+
+msgid "Toggle Wireframe"
 msgstr ""
 
 msgid "Shortcut Key "
@@ -1643,6 +1656,11 @@ msgid ""
 msgstr ""
 
 msgid ""
+"Too small max volumetric speed.\n"
+"Reset to 0.5"
+msgstr ""
+
+msgid ""
 "Too small layer height.\n"
 "Reset to 0.2"
 msgstr ""
@@ -2458,10 +2476,10 @@ msgstr ""
 msgid "Export toolpaths as OBJ"
 msgstr ""
 
-msgid "Open &PrusaSlicer"
+msgid "Open &Studio"
 msgstr ""
 
-msgid "Open PrusaSlicer"
+msgid "Open Studio"
 msgstr ""
 
 msgid "&Quit"
@@ -2733,6 +2751,11 @@ msgid "Are you sure you want to cancel this print?"
 msgstr ""
 
 msgid "Downloading..."
+msgstr ""
+
+msgid ""
+"Cannot read filament info: the filament is loaded to the tool head,please "
+"unload the filament and try again."
 msgstr ""
 
 msgid "This only takes effect during printing"
@@ -3172,9 +3195,6 @@ msgid "The selected object couldn't be split."
 msgstr ""
 
 msgid "Another export job is running."
-msgstr ""
-
-msgid "Another export job is currently running."
 msgstr ""
 
 msgid "Select a new file"
@@ -3765,7 +3785,7 @@ msgstr ""
 msgid "An SD card needs to be inserted before printing."
 msgstr ""
 
-msgid "An SD card needs to be inserted to recording timelapse"
+msgid "An SD card needs to be inserted to record timelapse."
 msgstr ""
 
 msgid "Please check the following infomation:\n"
@@ -3828,13 +3848,13 @@ msgid "Click to reset all settings to the last saved preset."
 msgstr ""
 
 msgid ""
-"Prime tower is required by smooth timeplase. If whthout prime tower, there "
-"will be flaws on the model. Are you sure you want to disable prime tower?"
+"Prime tower is required for smooth timeplase. There may be flaws on the "
+"model without prime tower. Are you sure you want to disable prime tower?"
 msgstr ""
 
 msgid ""
-"Prime tower is required by smooth timelapse. If whthout prime tower, there "
-"will be flaws on the model. Do you want to enable prime tower?"
+"Prime tower is required for smooth timelapse. There may be flaws on the "
+"model without prime tower. Do you want to enable prime tower?"
 msgstr ""
 
 msgid ""
@@ -3878,6 +3898,9 @@ msgid "Travel speed"
 msgstr ""
 
 msgid "Acceleration"
+msgstr ""
+
+msgid "Raft"
 msgstr ""
 
 msgid "Support filament"
@@ -4266,6 +4289,11 @@ msgid "Auto-Calc"
 msgstr ""
 
 msgid "Flushing volumes for filament change"
+msgstr ""
+
+msgid ""
+"The flush volume is less than the minimum value and will be automatically "
+"set to the minimum value."
 msgstr ""
 
 msgid "Flushing volume (mm³) for each filament pair."
@@ -4820,12 +4848,6 @@ msgid ""
 msgstr ""
 
 #, possible-boost-format
-msgid ""
-"\n"
-"%1% is too close to exclusion area, there may be collisions when printing."
-msgstr ""
-
-#, possible-boost-format
 msgid "%1% is too close to others, and collisions may be caused."
 msgstr ""
 
@@ -5160,6 +5182,15 @@ msgid ""
 "of the line without support from lower layer"
 msgstr ""
 
+msgid "Bridge direction"
+msgstr ""
+
+msgid ""
+"Bridging angle override. If left to zero, the bridging angle will be "
+"calculated automatically. Otherwise the provided angle will be used for "
+"external bridges. Use 180°for zero angle."
+msgstr ""
+
 msgid "Bridge flow"
 msgstr ""
 
@@ -5405,6 +5436,14 @@ msgid ""
 "object printing."
 msgstr ""
 
+msgid "Max Radius"
+msgstr ""
+
+msgid ""
+"Max clearance radius around extruder. Used as input of auto-arranging to "
+"avoid collision when printing by object"
+msgstr ""
+
 msgid "Extruder Color"
 msgstr ""
 
@@ -5448,7 +5487,21 @@ msgstr ""
 msgid "s"
 msgstr ""
 
+msgid "Default color"
+msgstr ""
+
+msgid "Default filament color"
+msgstr ""
+
 msgid "Color"
+msgstr ""
+
+msgid "Required nozzle HRC"
+msgstr ""
+
+msgid ""
+"Minimum HRC of nozzle required to print the filament. Zero means no checking "
+"of nozzle's HRC."
 msgstr ""
 
 msgid "Max volumetric speed"
@@ -5457,7 +5510,7 @@ msgstr ""
 msgid ""
 "This setting stands for how much volume of filament can be melted and "
 "extruded per second. Printing speed is limited by max volumetric speed, in "
-"case of too high and unreasonable speed setting. Zero means no limit"
+"case of too high and unreasonable speed setting. Can't be zero"
 msgstr ""
 
 msgid "mm³/s"
@@ -5585,6 +5638,9 @@ msgid ""
 "surface quality"
 msgstr ""
 
+msgid "Acceleration of outer wall. Using a lower value can improve quality"
+msgstr ""
+
 msgid ""
 "Acceleration of initial layer. Using a lower value can improve build plate "
 "adhensive"
@@ -5702,6 +5758,17 @@ msgid "Stainless steel"
 msgstr ""
 
 msgid "Brass"
+msgstr ""
+
+msgid "Nozzle HRC"
+msgstr ""
+
+msgid ""
+"The nozzle's hardness. Zero means no checking for nozzle's hardness during "
+"slicing."
+msgstr ""
+
+msgid "HRC"
 msgstr ""
 
 msgid "Enable this option if machine has auxiliary part cooling fan"
@@ -6480,7 +6547,7 @@ msgid ""
 "Purging after filament change will be done inside objects' infills. This may "
 "lower the amount of waste and decrease the print time. If the walls are "
 "printed with transparent filament, the mixed color infill will be seen "
-"outside"
+"outside. It will not take effect, unless the prime tower is enabled."
 msgstr ""
 
 msgid "Flush into objects' support"
@@ -6488,7 +6555,8 @@ msgstr ""
 
 msgid ""
 "Purging after filament change will be done inside objects' support. This may "
-"lower the amount of waste and decrease the print time"
+"lower the amount of waste and decrease the print time. It will not take "
+"effect, unless the prime tower is enabled."
 msgstr ""
 
 msgid "Flush into this object"
@@ -6497,7 +6565,7 @@ msgstr ""
 msgid ""
 "This object will be used to purge the nozzle after a filament change to save "
 "filament and decrease the print time. Colours of the objects will be mixed "
-"as a result"
+"as a result. It will not take effect, unless the prime tower is enabled."
 msgstr ""
 
 msgid "X-Y hole compensation"
