--- a/bbl/i18n/fr/BambuStudio_fr.po
+++ b/bbl/i18n/fr/BambuStudio_fr.po
@@ -2,7 +2,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: Bambu Studio\n"
 "Report-Msgid-Bugs-To: \n"
-"POT-Creation-Date: 2022-10-21 14:33+0800\n"
+"POT-Creation-Date: 2022-10-31 09:32+0800\n"
 "PO-Revision-Date: \n"
 "Last-Translator: \n"
 "Language-Team: \n"
@@ -67,6 +67,9 @@ msgstr "Type d'outil"
 msgid "Smart fill angle"
 msgstr "Angle de remplissage intelligent"
 
+msgid "On overhangs only"
+msgstr ""
+
 msgid "Auto support threshold angle: "
 msgstr "Angle de seuil de support automatique :"
 
@@ -80,6 +83,10 @@ msgid "Fill"
 msgstr "Remplir"
 
 msgid "Gap Fill"
+msgstr ""
+
+#, boost-format
+msgid "Allows painting only on facets selected by: \"%1%\""
 msgstr ""
 
 msgid "Highlight faces according to overhang angle."
@@ -138,6 +145,12 @@ msgstr "Remplissage du seau"
 
 msgid "Height range"
 msgstr "Plage de hauteur"
+
+msgid "Ctrl + Shift + Enter"
+msgstr ""
+
+msgid "Toggle Wireframe"
+msgstr ""
 
 msgid "Shortcut Key "
 msgstr "Touche de raccourci"
@@ -1737,6 +1750,11 @@ msgid ""
 msgstr ""
 
 msgid ""
+"Too small max volumetric speed.\n"
+"Reset to 0.5"
+msgstr ""
+
+msgid ""
 "Too small layer height.\n"
 "Reset to 0.2"
 msgstr "Hauteur de couche trop petite. Réinitialiser à 0,2"
@@ -2589,11 +2607,11 @@ msgstr "Exporter &Toolpaths en OBJ"
 msgid "Export toolpaths as OBJ"
 msgstr "Exporter les parcours d'outils en OBJ"
 
-msgid "Open &PrusaSlicer"
-msgstr "Ouvrir &PrusaSlicer"
+msgid "Open &Studio"
+msgstr ""
 
-msgid "Open PrusaSlicer"
-msgstr "Ouvrir PrusaSlicer"
+msgid "Open Studio"
+msgstr ""
 
 msgid "&Quit"
 msgstr "&Quitter"
@@ -2865,6 +2883,11 @@ msgstr ""
 
 msgid "Downloading..."
 msgstr "Downloading..."
+
+msgid ""
+"Cannot read filament info: the filament is loaded to the tool head,please "
+"unload the filament and try again."
+msgstr ""
 
 msgid "This only takes effect during printing"
 msgstr ""
@@ -3318,9 +3341,6 @@ msgstr "L'objet sélectionné n'a pas pu être divisé."
 
 msgid "Another export job is running."
 msgstr "Une autre tâche d'exportation est en cours d'exécution."
-
-msgid "Another export job is currently running."
-msgstr ""
 
 msgid "Select a new file"
 msgstr ""
@@ -3946,7 +3966,7 @@ msgstr ""
 msgid "An SD card needs to be inserted before printing."
 msgstr ""
 
-msgid "An SD card needs to be inserted to recording timelapse"
+msgid "An SD card needs to be inserted to record timelapse."
 msgstr ""
 
 msgid "Please check the following infomation:\n"
@@ -4012,13 +4032,13 @@ msgid "Click to reset all settings to the last saved preset."
 msgstr ""
 
 msgid ""
-"Prime tower is required by smooth timeplase. If whthout prime tower, there "
-"will be flaws on the model. Are you sure you want to disable prime tower?"
+"Prime tower is required for smooth timeplase. There may be flaws on the "
+"model without prime tower. Are you sure you want to disable prime tower?"
 msgstr ""
 
 msgid ""
-"Prime tower is required by smooth timelapse. If whthout prime tower, there "
-"will be flaws on the model. Do you want to enable prime tower?"
+"Prime tower is required for smooth timelapse. There may be flaws on the "
+"model without prime tower. Do you want to enable prime tower?"
 msgstr ""
 
 msgid ""
@@ -4067,6 +4087,9 @@ msgstr "Vitesse de voyage"
 
 msgid "Acceleration"
 msgstr "Accélération"
+
+msgid "Raft"
+msgstr ""
 
 msgid "Support filament"
 msgstr "Filament de support"
@@ -4501,6 +4524,11 @@ msgstr "Auto-Calc"
 
 msgid "Flushing volumes for filament change"
 msgstr "Volumes de rinçage pour le changement de filament"
+
+msgid ""
+"The flush volume is less than the minimum value and will be automatically "
+"set to the minimum value."
+msgstr ""
 
 msgid "Flushing volume (mm³) for each filament pair."
 msgstr "Volume de rinçage (mm³) pour chaque paire de filaments."
@@ -5073,12 +5101,6 @@ msgid ""
 msgstr ""
 
 #, boost-format
-msgid ""
-"\n"
-"%1% is too close to exclusion area, there may be collisions when printing."
-msgstr ""
-
-#, boost-format
 msgid "%1% is too close to others, and collisions may be caused."
 msgstr ""
 "%1% est trop proche des autres, cela pourrait provoquer des collisions."
@@ -5484,6 +5506,15 @@ msgstr ""
 "pourcentage qui indique la largeur de la ligne sans support de la couche "
 "inférieure"
 
+msgid "Bridge direction"
+msgstr ""
+
+msgid ""
+"Bridging angle override. If left to zero, the bridging angle will be "
+"calculated automatically. Otherwise the provided angle will be used for "
+"external bridges. Use 180°for zero angle."
+msgstr ""
+
 msgid "Bridge flow"
 msgstr "Débit des ponts"
 
@@ -5763,6 +5794,14 @@ msgid ""
 "object printing."
 msgstr ""
 
+msgid "Max Radius"
+msgstr ""
+
+msgid ""
+"Max clearance radius around extruder. Used as input of auto-arranging to "
+"avoid collision when printing by object"
+msgstr ""
+
 msgid "Extruder Color"
 msgstr "Couleur de l'extrudeuse"
 
@@ -5820,8 +5859,22 @@ msgstr ""
 msgid "s"
 msgstr "s"
 
+msgid "Default color"
+msgstr ""
+
+msgid "Default filament color"
+msgstr ""
+
 msgid "Color"
 msgstr "Couleur"
+
+msgid "Required nozzle HRC"
+msgstr ""
+
+msgid ""
+"Minimum HRC of nozzle required to print the filament. Zero means no checking "
+"of nozzle's HRC."
+msgstr ""
 
 msgid "Max volumetric speed"
 msgstr "Vitesse volumétrique max"
@@ -5829,12 +5882,8 @@ msgstr "Vitesse volumétrique max"
 msgid ""
 "This setting stands for how much volume of filament can be melted and "
 "extruded per second. Printing speed is limited by max volumetric speed, in "
-"case of too high and unreasonable speed setting. Zero means no limit"
+"case of too high and unreasonable speed setting. Can't be zero"
 msgstr ""
-"Ce paramètre représente le volume de filament pouvant être fondu et extrudé "
-"par seconde. La vitesse d'impression est limitée par la vitesse volumétrique "
-"maximale, en cas de réglage de vitesse trop élevé et déraisonnable. Zéro "
-"signifie pas de limite"
 
 msgid "mm³/s"
 msgstr "mm³/s"
@@ -5978,6 +6027,9 @@ msgstr ""
 "Il s'agit de l'accélération de la surface supérieure du remplissage. "
 "Utiliser une valeur plus petite pourrait améliorer la qualité de la surface "
 "supérieure."
+
+msgid "Acceleration of outer wall. Using a lower value can improve quality"
+msgstr ""
 
 msgid ""
 "Acceleration of initial layer. Using a lower value can improve build plate "
@@ -6127,6 +6179,17 @@ msgstr "Acier inoxydable"
 
 msgid "Brass"
 msgstr "Laiton"
+
+msgid "Nozzle HRC"
+msgstr ""
+
+msgid ""
+"The nozzle's hardness. Zero means no checking for nozzle's hardness during "
+"slicing."
+msgstr ""
+
+msgid "HRC"
+msgstr ""
 
 msgid "Enable this option if machine has auxiliary part cooling fan"
 msgstr ""
@@ -7027,23 +7090,17 @@ msgid ""
 "Purging after filament change will be done inside objects' infills. This may "
 "lower the amount of waste and decrease the print time. If the walls are "
 "printed with transparent filament, the mixed color infill will be seen "
-"outside"
+"outside. It will not take effect, unless the prime tower is enabled."
 msgstr ""
-"La purge après le changement de filament se fera dans le remplissage des "
-"objets. Cela peut réduire la quantité de déchets et diminuer le temps "
-"d'impression. Si les murs sont imprimés avec un filament translucide, le "
-"remplissage de couleur mixte sera visible."
 
 msgid "Flush into objects' support"
 msgstr "Purger dans les supports de l'objet"
 
 msgid ""
 "Purging after filament change will be done inside objects' support. This may "
-"lower the amount of waste and decrease the print time"
+"lower the amount of waste and decrease the print time. It will not take "
+"effect, unless the prime tower is enabled."
 msgstr ""
-"La purge après le changement de filament se fera dans les supports des "
-"objets. Cela peut réduire la quantité de déchets et diminuer le temps "
-"d'impression."
 
 msgid "Flush into this object"
 msgstr "Purger dans cet objet"
@@ -7051,11 +7108,8 @@ msgstr "Purger dans cet objet"
 msgid ""
 "This object will be used to purge the nozzle after a filament change to save "
 "filament and decrease the print time. Colours of the objects will be mixed "
-"as a result"
+"as a result. It will not take effect, unless the prime tower is enabled."
 msgstr ""
-"Cet objet sera utilisé pour purger la buse après un changement de filament "
-"afin d'économiser du filament et de diminuer le temps d'impression. Les "
-"couleurs des objets seront mélangées en conséquence."
 
 msgid "X-Y hole compensation"
 msgstr "Compensation de trou X-Y"
